--- a/index.html
+++ b/index.html
@@ -488,13 +488,22 @@
         <div class="footer-form">
           <p class="footer-form-title">Subscribe</p>
           <div class="footer-form-wrap">
-            <input type="email" class="footer-input" placeholder="E-mail" />
-            <button type="button" class="footer-button primary-btn">
-              Subscribe
-              <svg class="footer-input-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-telegram"></use>
-              </svg>
-            </button>
+            <form class="footer-form-group">
+              <label class="subscribe label">
+                <input
+                  class="subscribe-input"
+                  type="email"
+                  class="footer-input"
+                  placeholder="E-mail"
+                />
+              </label>
+              <button type="button" class="footer-button primary-btn">
+                Subscribe
+                <svg class="footer-input-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-telegram"></use>
+                </svg>
+              </button>
+            </form>
           </div>
         </div>
       </div>
@@ -503,48 +512,83 @@
     <!-- #region modal -->
     <div class="modal-overlay">
       <div class="modal">
-        <div class="modal-close-btn">
-          <svg class="modal-close-icon" width="8" height="8">
+        <button type="button" class="close-btn">
+          <svg class="close-icon" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
-        </div>
+        </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form">
-          <label class="modal-form-input curent"
-            >Name
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-person"></use>
-            </svg>
-            <input type="text" name="name" />
-          </label>
-          <label class="modal-form-input"
-            >Phone
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-phone"></use>
-            </svg>
-            <input type="tel" name="phone" />
-          </label>
-          <label class="modal-form-input"
-            >Email
-            <svg class="modal-form-icon" width="18" height="18">
-              <use href="./images/icons.svg#icon-email"></use>
-            </svg>
-            <input type="email" name="email" />
-          </label>
-          <label class="modal-form-input form-textarea"
-            >Comment
+          <div class="input-group">
+            <label class="input-label" for="user-name">Name</label>
+            <div class="input-wrapper">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="input-field"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-group">
+            <label class="input-label" for="user-phone">Phone</label>
+            <div class="input-wrapper">
+              <input
+                type="tel"
+                id="user-phone"
+                name="user-phone"
+                class="input-field"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="input-group">
+            <label class="input-label" for="user-email">Email</label>
+            <div class="input-wrapper">
+              <input
+                type="email"
+                id="user-email"
+                name="user-email"
+                class="input-field"
+              />
+              <svg class="input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="textarea-group">
+            <label class="input-label" for="user-comment">Comment</label>
             <textarea
-              name="message"
-              rows="4"
+              id="user-comment"
+              name="user-comment"
+              class="textarea-field"
               placeholder="Text input"
             ></textarea>
-          </label>
-          <label class="checkbox-text">
-            <input type="checkbox" name="consent" id="consent" /> I accept the
-            terms and conditions of the
-            <span class="checkbox-span">Privacy Policy</span>
-          </label>
-          <button type="submit" class="modal-btn primary-btn">Send</button>
+          </div>
+          <div class="checkbox-group">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              name="user-privacy"
+              value="true"
+              class="checkbox-input visually-hidden"
+            />
+            <label for="user-privacy" class="checkbox-label">
+              <span class="checkbox-custom">
+                <svg class="checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="privacy-link">Privacy Policy</a>
+            </label>
+          </div>
+          <button type="submit" class="submit-btn primary-btn">Send</button>
         </form>
       </div>
     </div>
